<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <data>

        <import type="java.lang.String" />

        <variable
            name="viewModel"
            type="com.pt.khanh.movie.screen.home.HomeViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="384dp"
                android:layout_height="@dimen/dp_250"
                app:setAdapterViewPager="@{viewModel.trendingMovieAdapter}" />

            <com.rd.PageIndicatorView
                android:id="@+id/page_indicator_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:piv_animationType="scale"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_padding="@dimen/dp_4"
                app:piv_radius="@dimen/dp_4"
                app:piv_selectedColor="@android:color/white"
                app:piv_unselectedColor="@color/color_iron"
                app:setViewPagerIndicator="@{viewModel.viewPager}" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                app:layout_constraintEnd_toStartOf="@id/card_view_now_playing"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_pager">

                <ImageView
                    android:id="@+id/image_popular"
                    style="@style/StyleImageCategory"
                    app:imageUrl="@{viewModel.moviePopular.backdropPath}" />

                <View
                    style="@style/StyleViewCategory"
                    android:layout_gravity="bottom" />

                <TextView
                    android:id="@+id/text_popular"
                    style="@style/StyleTextCategory"
                    android:layout_gravity="bottom"
                    android:text="@string/category_popular"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_view_popular"
                app:layout_constraintTop_toBottomOf="@id/view_pager">

                <ImageView
                    android:id="@+id/image_now_playing"
                    style="@style/StyleImageCategory"
                    app:imageUrl="@{viewModel.movieNowPlaying.backdropPath}" />

                <View
                    style="@style/StyleViewCategory"
                    android:layout_gravity="bottom" />

                <TextView
                    android:id="@+id/text_now_playing"
                    style="@style/StyleTextCategory"
                    android:layout_gravity="bottom"
                    android:text="@string/category_now_playing"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_top_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/card_view_popular"
                app:layout_constraintTop_toBottomOf="@id/card_view_popular"
                app:layout_constraintVertical_bias="0.3">

                <ImageView
                    android:id="@+id/image_top_rate"
                    style="@style/StyleImageCategory"
                    app:imageUrl="@{viewModel.movieTopRated.backdropPath}" />

                <View
                    style="@style/StyleViewCategory"
                    android:layout_gravity="bottom" />

                <TextView
                    android:id="@+id/text_top_rate"
                    style="@style/StyleTextCategory"
                    android:layout_gravity="bottom"
                    android:text="@string/category_top_rate"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_view_now_playing"
                app:layout_constraintTop_toBottomOf="@id/card_view_now_playing"
                app:layout_constraintVertical_bias="0.3">

                <ImageView
                    android:id="@+id/image_upcoming"
                    style="@style/StyleImageCategory"
                    app:imageUrl="@{viewModel.movieUpComing.backdropPath}" />

                <View
                    style="@style/StyleViewCategory"
                    android:layout_gravity="bottom" />

                <TextView
                    android:id="@+id/text_upcoming"
                    style="@style/StyleTextCategory"
                    android:layout_gravity="bottom"
                    android:text="@string/category_upcoming"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>
