<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.pt.khanh.movie.screen.detail.DetailViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_fragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:onInitializedListener="@{viewModel.initListener}" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_fragment">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_poster"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_150"
                    android:layout_margin="@dimen/dp_8"
                    android:scaleType="fitXY"
                    app:imageUrl="@{viewModel.movieDetailObservableField.posterPath}"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_title"
                    style="@style/StyleTextTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.movieDetailObservableField.title}"
                    android:textColor="@color/color_sea_buckthorn"
                    app:layout_constraintLeft_toRightOf="@id/image_poster"
                    app:layout_constraintRight_toLeftOf="@id/button_favorite" />

                <ImageButton
                    android:id="@+id/button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_4"
                    android:background="@null"
                    android:src="@drawable/ic_favorite_yes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_title" />

                <TextView
                    android:id="@+id/text_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:ellipsize="end"
                    android:maxLines="7"
                    android:text="@{viewModel.movieDetailObservableField.overview}"
                    app:colorClickableText="@color/colorPrimary"
                    app:layout_constraintEnd_toStartOf="@id/button_favorite"
                    app:layout_constraintStart_toEndOf="@id/image_poster"
                    app:layout_constraintTop_toBottomOf="@id/text_title" />

                <TextView
                    android:id="@+id/text_title_genre"
                    style="@style/StyleTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/title_genres"
                    android:textColor="@color/color_sea_buckthorn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_poster" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_title_genre"
                    app:recyclerAdapter="@{viewModel.genreDetailAdapter}" />

                <TextView
                    android:id="@+id/text_title_cast"
                    style="@style/StyleTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/title_cast"
                    android:textColor="@color/color_sea_buckthorn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_genre" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_cast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_title_cast"
                    app:recyclerAdapter="@{viewModel.castAdapter}" />

                <TextView
                    android:id="@+id/text_title_recommend"
                    style="@style/StyleTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/title_recommend"
                    android:textColor="@color/color_sea_buckthorn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_cast" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_recommend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_title_recommend"
                    app:recyclerAdapter="@{viewModel.movieByAdapter}" />

                <TextView
                    android:id="@+id/text_title_review"
                    style="@style/StyleTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/title_review"
                    android:textColor="@color/color_sea_buckthorn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_recommend" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:orientation="vertical"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_title_review"
                    app:recyclerAdapter="@{viewModel.reviewAdapter}" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
